--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="180dp"
     android:background="?attr/colorPrimary"
-    android:gravity="bottom"
+    android:gravity="bottom|center"
     android:orientation="vertical"
     android:padding="20dp">
 
     <ImageView
         android:layout_width="150dp"
         android:layout_height="78dp"
-        android:src="@drawable/app_icon" />
+        android:src="@mipmap/ic_launcher_round" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
