--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -9,6 +9,9 @@
         <item android:id="@+id/inmobiliaria"
             android:icon="@drawable/ic_inmobiliaria"
             android:title="@string/real_estate" />
+        <item android:id="@+id/scanQr"
+            android:title="@string/scanQR"
+            android:icon="@drawable/ic_scan_qr"/>
         <item android:id="@+id/aboutUs"
             android:title="@string/about_us"
             android:icon="@drawable/ic_about_us"/>
